# openprism

./: Cargo.toml
.github/workspaces/: rust.yml
ironbindings/: Cargo.toml  dbg.json  dbg.txt
ironbindings/mir-visitor/: CONTRIB.md  Cargo.toml
ironbindings/mir-visitor/src/: lib.rs  visitors.rs
ironbindings/mir-visitor/src/visitors/: function_visitor.rs  module_visitor.rs  struct_visitor.rs
ironbindings/src/: lib.rs  parse.rs  rustdoc.rs  tfidf.rs
ironbindings/src/python/: function.rs  getattr.rs  mod.rs  utils.rs  ztruct.rs
ironbindings/src/python/traits/: cmp_and_eq.rs  core_clone_clone.rs  core_fmt_debug.rs  core_fmt_display.rs  core_hash_hash.rs  core_ops_arith.rs  mod.rs
ironbindings/src/utils/: counter.rs  mod.rs  twine.rs  unwrap_as.rs
ironbindings/syn-python/: Cargo.toml  README.md
ironbindings/syn-python/src/: components.rs  lib.rs  python_token.rs
ironbindings/syn-python/src/components/: class.rs  component.rs  decorator.rs  docstring.rs  function.rs  import.rs  method.rs  module.rs  package.rs  typing.rs
ironbindings/tags/: Cargo.toml
ironbindings/tags/src/: lib.rs
ironbindings/tests/: test_krate_generation.rs
ironbindings/tests/krate_generation/: Cargo.toml
ironbindings/tests/krate_generation/src/: lib.rs
irongraph/: Cargo.toml  README.md
irongraph/csr/: Cargo.toml
irongraph/csr/benches/: iter.rs
irongraph/csr/fuzz/: Cargo.toml
irongraph/csr/fuzz/fuzz_targets/: iter.rs
irongraph/csr/src/: builders.rs  csr.rs  iter.rs  lib.rs  par_iter.rs
irongraph/csr/src/builders/: from_sorted_edge_stream.rs
irongraph/csr/tests/: build_csr.rs
irongraph/graph/: Cargo.toml
irongraph/graph/src/: iter.rs  lib.rs
irongraph/hypersketching/: Cargo.toml
irongraph/hypersketching/src/: lib.rs
ironstructs/: Cargo.toml  README.md
ironstructs/custom_iters/: Cargo.toml
ironstructs/custom_iters/src/: cloned.rs  copied.rs  lib.rs  skip.rs  take.rs
ironstructs/par_replica/: Cargo.toml
ironstructs/par_replica/src/: lib.rs
ironstructs/ranger/: Cargo.toml  README.md
ironstructs/ranger/src/: into_par_iter.rs  lib.rs
ironstructs/src/: lib.rs
irontraits/: Cargo.toml  README.md
irontraits/src/: iter.rs  lib.rs  positive_integer.rs  rayon_traits.rs  sequence.rs  sequence_alloc.rs  to.rs
